# MySeniorProjectNew

./: .gitignore  AGENTS.md  README.md  SRS.md  documentation.md  fonts.md  opencode.jsonc  workflow.md
.kilo/plans/: 1775833564024-crisp-mountain.md  1776429447016-hidden-cactus.md
docs/: HyperTool_Senior_Project_Report.docx  chapter-5-database-schema.md  chapter5.md  chapter6.md  chapters-4.2-to-7.md  code.html  design.md  diagrams-required.md  infos.md  presentation_guid.md  project_report.md  prompot.txt  report.md  reportRequirment.md  reportrequirements.md  rules.md
docs/Report/: HyperTool_Senior_Project_Report_PART 1.docx
docs/diagram/: README.md
docs/diagram/chapter-3-analysis/: 01-use-case-diagram.drawio  02-activity-diagram-scanning.drawio  03-activity-diagram-vault.drawio  04-activity-diagram-password.drawio  05-activity-diagram-ai-chat.drawio  06-er-diagram.drawio
docs/diagram/chapter-4-design/: 07-dfd-level-0.drawio  08-dfd-level-1.drawio  09-component-diagram.drawio  10-system-architecture.drawio  11-database-schema.drawio  12-encryption-module-flow.drawio
docs/diagrams/: 01-system-architecture.drawio  03-level0-context.drawio  entity-relationship-diagram.drawio
docs/plans/: Bahrain Branch - Project Proposal Template.docx  HyperTool_Documentation_Plan.md  HyperTool_Senior_Project_Report_2025-01-15.docx  HyperTool_prop.docx  Senior_Project_Rebuttal.docx  TM471A Presentation Template.pptx  TM471_report_Cover.doc
project/: .gitignore  AGENTS.md  HyperTool_Documentation_Plan.md  README.md  firestore.rules  generate-icons.cjs  index.html  integrGoogleAuth.md  package-lock.json  package.json  patch.cjs  patch2.cjs  patch3.cjs  roles.md  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  workflow.md
project/src/: App.tsx  index.css  main.tsx
project/src-tauri/: .env  Cargo.toml  build-low-mem.ps1  build-low-mem.sh  tauri.conf.json
project/src-tauri/capabilities/: default.json
project/src-tauri/icons/: icon.icns
project/src-tauri/src/: ai_agent.rs  crypto.rs  diagram.rs  image_privacy.rs  lib.rs  terminal.rs  virustotal.rs
project/src/components/: Mermaid.tsx  theme-provider.tsx
project/src/data/: securityQuestions.ts  (+1 more)
website/: next.config.ts  package-lock.json  package.json
website/app/: globals.css  layout.tsx  page.tsx
website/components/: cta.tsx  features.tsx  footer.tsx  hero.tsx  navbar.tsx  screenshots.tsx  stats.tsx
(+161 files in other folders)
