[package]
name = "project"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "project_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
argon2 = "0.5"
base64 = "0.22"
rand = "0.8"
tauri-plugin-dialog = "2"
kamadak-exif = "0.6.1"
img-parts = "0.4.0"
bytes = "1.11.1"
image = "0.24"
chrono = "0.4.44"
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["fs", "macros", "rt", "rt-multi-thread", "time"] }
urlencoding = "2.1.3"
dotenvy = "0.15.7"
portable-pty = "0.8"

[profile.release]
codegen-units = 1
opt-level = 2
strip = true
lto = "thin"

[profile.dev]
codegen-units = 4
opt-level = 0
